--- a/styles/globals.css
+++ b/styles/globals.css
@@ -152,12 +152,12 @@ span.text-red {
 .hero-banner-container {
   padding: 100px 40px;
   background-color: #dcdcdc;
-  border-radius: 15px;
   position: relative;
   height: 500px;
   line-height: 0.9;
   width: 100%;
-
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 .hero-banner-container .beats-solo {
@@ -170,22 +170,27 @@ span.text-red {
   background-color: #f02d34;
   color: white;
   border: none;
-  margin-top: 40px;
+  margin-top: 20px;
+  margin-left: 10px;
   font-size: 18px;
   font-weight: 500;
   cursor: pointer;
   z-index: 10000 !important;
 }
 
+.hero-banner-container p {
+  color: rgb(192, 192, 192);
+}
+
 .hero-banner-container h3 {
   font-size: 4rem;
   margin-top: 4px;
+  color: rgb(221, 221, 221);
 }
 
 .hero-banner-container h1 {
   color: white;
   font-size: 10em;
-  margin-left: -20px;
   text-transform: uppercase;
 }
 
@@ -200,7 +205,7 @@ span.text-red {
 
 .desc {
   position: absolute;
-  right: 10%;
+  right: 3%;
   bottom: 5%;
   width: 300px;
   line-height: 1.3;
@@ -211,17 +216,10 @@ span.text-red {
 }
 
 .desc p {
-  color: #5f5f5f;
+  color: #ffffff;
   font-weight: 100;
   text-align: end;
-}
-
-.desc h5 {
-  margin-bottom: 12px;
-  font-weight: 700;
-  font-size: 16px;
-  /* color: black; */
-  align-self: flex-end;
+  font-size: 1.9rem;
 }
 
 .products-heading {
@@ -717,6 +715,9 @@ span.text-red {
 @media screen and (max-width:800px) {
   .hero-banner-container {
     height: 560px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
   }
 
   .hero-banner-image {
@@ -778,12 +779,13 @@ span.text-red {
   }
 
   .hero-banner-container button {
-    margin-top: 90px;
+    margin-top: 30px;
     z-index: 10000;
   }
 
   .desc {
     bottom: 60px;
+    right: 35px;
   }
 
   .product-detail-container {
