--- a/styles/globals.css
+++ b/styles/globals.css
@@ -387,11 +387,12 @@ span.text-red {
   overflow: auto;
   max-height: 70vh;
   padding: 20px 10px;
+  padding-bottom: 80px !important;
 }
 
 .product {
   display: flex;
-  gap: 30px;
+  gap: 20px;
   padding: 20px;
 }
 
@@ -444,8 +445,9 @@ span.text-red {
   position: absolute;
   bottom: 12px;
   right: 5px;
-  width: 100%;
+  width: 99%;
   padding: 30px 65px;
+  background-color: white;
 
 }
 
