--- a/styles/globals.css
+++ b/styles/globals.css
@@ -78,9 +78,18 @@ span.text-red {
 }
 
 .logo {
-  color: gray;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: rgb(42, 42, 42);
+  font-weight: 600;
   font-size: 18px;
+  cursor: pointer;
+}
 
+.logo img {
+  width: 50px;
+  margin-right: 10px;
 }
 
 .cart-icon {
